Modified test